# Snake-SFML

./: .gitignore  CMakeLists.txt  PVS-Studio.cmake  README.md  collect.bat  config.rc  main.cpp  snake.res
BonusManager/: BonusManager.cpp  BonusManager.hpp
BonusManager/Bonus/: Bonus.cpp  Bonus.hpp
BonusManager/Eat/: Eat.cpp  Eat.hpp
BonusManager/EatFiller/: EatFiller.cpp  EatFiller.hpp
BonusManager/Move/: Move.cpp  Move.hpp
BonusManager/SteppedOnBody/: SteppedOnBody.cpp  SteppedOnBody.hpp
BonusManager/SteppedOnHead/: SteppedOnHead.cpp  SteppedOnHead.hpp
Cell/: Cell.cpp  Cell.hpp
CellsPool/: CellsPool.cpp  CellsPool.hpp  CellsPool.tpl.cpp
CellsPool/Cell/: Cell.cpp  Cell.hpp  Filler.cpp
CellsPool/Cell/Filler/: Filler.cpp  Filler.hpp
CellsPool/Cell/Fillers/: Body.hpp  EatFiller.hpp  FreeCellFiller.hpp  Head.hpp
CellsPool/Cell/FreeCellFiller/: FreeCellFiller.cpp  FreeCellFiller.hpp
CellsPool/DefaultRectangle/: Configurator.cpp  DefaultRectangle.cpp  DefaultRectangle.hpp
CellsPool/NotFoundFreeCell/: NotFoundFreeCell.cpp  NotFoundFreeCell.hpp
CellsPool/RequestedCell/: RequestedCell.cpp  RequestedCell.hpp
Coord/: Coord.cpp  Coord.hpp
DefaultRectangle/: DefaultRectangle.cpp  DefaultRectangle.hpp
ErrorPrinter/: ErrorPrinter.cpp  ErrorPrinter.hpp
Executable/: Snake.exe.lnk
Executable/Resources/Audio/: Audio link.txt
SRC/: main.cpp
SRC/AudioPlayer/: AudioController.cpp  AudioController.hpp  AudioPlayer.cpp  AudioPlayer.hpp
SRC/AudioPlayer/MusicPlayer/: MusicPlayer.cpp  MusicPlayer.hpp
SRC/AudioPlayer/SoundPlayer/: SoundPlayer.cpp  SoundPlayer.hpp
SRC/BonusManager/: BonusManager.cpp  BonusManager.hpp
SRC/BonusManager/AddChapter/: AddChapter.cpp  AddChapter.hpp
SRC/BonusManager/Bonus/: Bonus.cpp  Bonus.hpp
SRC/BonusManager/Eat/: Eat.cpp  Eat.hpp
SRC/BonusManager/Move/: Move.cpp  Move.hpp
SRC/BonusManager/SteppedOnBody/: SteppedOnBody.cpp  SteppedOnBody.hpp
SRC/BonusManager/SteppedOnHead/: SteppedOnHead.cpp  SteppedOnHead.hpp
SRC/CellsPool/: CellsPool.cpp  CellsPool.hpp  CellsPool.tpl.cpp
SRC/CellsPool/Cell/: Cell.cpp  Cell.hpp
SRC/CellsPool/Cell/Filler/: Filler.cpp  Filler.hpp
SRC/CellsPool/Cell/Fillers/: Body.hpp  BodyAngle.hpp  BodyStraight.hpp  Eat.hpp  EatFiller.hpp  FreeCell.hpp  FreeCellFiller.hpp  Head.hpp  NullFiller.hpp  Tail.hpp
SRC/CellsPool/DefaultRectangle/: Configurator.cpp  DefaultRectangle.cpp  DefaultRectangle.hpp
SRC/CellsPool/NotFoundFreeCell/: NotFoundFreeCell.cpp  NotFoundFreeCell.hpp
SRC/Icon/: IconOpenGL.c  IconOpenGL.h  snake_128.c  snake_128.h
SRC/Snake/: EndGame.hpp  GameEnd.hpp  Snake.cpp  Snake.hpp  Snake.tpl.cpp
SRC/Utilites/Coord/: Coord.hpp
SRC/Utilites/ErrorPrinter/: ErrorPrinter.cpp  ErrorPrinter.hpp
SRC/Utilites/TextureStorage/: TextureStorage.cpp  TextureStorage.hpp
SRC/Utilites/ThreadGuard/: ThreadGuard.cpp
SRC/Utilites/ThreadGuard/LiveStorage/: LiveStorage.hpp
SRC/Utilites/TimeProfiler/: TimeProfiler.cpp  TimeProfiler.hpp
SRC/Utility/: ListRunner.hpp  RandomSort.hpp  Stopwatch.hpp  TimeProfiler.hpp  Timer.hpp
SRC/Utility/Coord/: Coord.cpp  Coord.hpp
SRC/Utility/ErrorPrinter/: ErrorPrinter.cpp  ErrorPrinter.hpp
SRC/Utility/FatalError/: FatalError.cpp  FatalError.hpp
SRC/Utility/RandomGenerator/: RandomGenerator.cpp  RandomGenerator.hpp
SRC/Utility/TextureStorage/: TextureStorage.cpp  TextureStorage.hpp
SRC/Utility/ThreadGuard/: ThreadGuard.cpp  ThreadGuard.hpp
SRC/Utility/ThreadGuard/LiveStorage/: LiveStorage.cpp
SRC/Utility/Trivials/: Trivials.cpp  Trivials.hpp
SRC/Utility/WindowForTests/: WindowForTests.cpp  WindowForTests.hpp
Snake/: Snake.cpp  Snake.hpp
Snake/SnakeFillers/Body/: Body.cpp  Body.hpp
Snake/SnakeFillers/Head/: Head.cpp  Head.hpp
TextureStorage/: TextureStorage.cpp  TextureStorage.hpp
TimeCounter/: TimeCounter.hpp
Utilites/: ListRunner.hpp  Timer.hpp
Utilites/ErrorPrinter/: ErrorPrinter.cpp
Utilites/Stopwatch/: Stopwatch.cpp
Utilites/TextureStorage/: TextureStorage.cpp
Utilites/ThreadGuard/: ThreadGuard.hpp
Utilites/ThreadGuard/LiveStorage/: LiveStorage.hpp
Utilites/TimeCounter/: IntervalChecker.hpp  TimeCounter.hpp
Utilites/TimeProfiler/: TimeProfiler.hpp
Utilites/Timer/: Timer.cpp  Timer.hpp
Utilites/WindowForTests/: WindowForTests.cpp  WindowForTests.hpp
